syntax = "proto2";

package chimp.protobuf;

// UserEvent = ClickBack | ClickHome | ClickMenu | PullDownSettings | Resume | Rotate


message ExtEvent {
  enum ExtEventType {
    CLICKBACK = 1;
    CLICKHOME = 2;
    CLICKMENU = 3;
    PULLDOWNSETTINGS = 4;
    RESUME = 5;
    ROTATE  = 6;
  }
  required ExtEventType eventType = 1;
}

message ClickBack {
}

message ClickHome {
}

message ClickMenu {
}

message PullDownSettings {
}

message Resume {
}

message Rotate {
}


